--- a/About_Mariana/index.css
+++ b/About_Mariana/index.css
@@ -38,7 +38,7 @@ img {
   margin-bottom: 50px;
   color: #8e8b8b;
   text-align: center;
-  font-size: 20px;
+  /* font-size: 20px; */
   padding: 20px;
   
 }
@@ -86,12 +86,12 @@ img {
 }
 
 .hr {
-  margin-top: 200px;
+  margin-top: 250px;
   margin-bottom: 20px;
 }
 h1 {
   font-family: "Palanquin", "Allura";
-  font-size: 8vw;
+  font-size: 2vw;
   text-align: center;
   color: #d77818;
 }
@@ -104,6 +104,6 @@ h2 {
 
 .greeting {
   padding: 20px;
-  font-size: 5vw;
+  font-size: 2vw;
   
 }
