--- a/About_Mariana/index.css
+++ b/About_Mariana/index.css
@@ -6,8 +6,7 @@
 }
 
 body {
-  background: #4d7471;
-
+  background: #deebe7;
   font-family: "Josefin Sans", "sans-serif";
 }
 img {
@@ -36,29 +35,27 @@ img {
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
-  color: #8e8b8b;
+  color:  #4d7471;
   text-align: center;
   /* font-size: 20px; */
   padding: 20px;
-  
 }
 .aboutMe_1 {
   width: 25em;
- 
   flex-direction: column;
 }
 
 .aboutMe_2 {
-  width: 50em;
+  width: 70em;
   text-align: center;
- 
+
 }
 
 .border {
-  border: 1px solid #d67818;
+  border: 1px solid #e59c2e;
   width: 100%;
   height: 200px;
-  background-color: #d67818;
+  background-color: #e59c2e;
   margin-top: 250px;
   position: absolute;
 }
@@ -66,18 +63,29 @@ img {
 .list {
   list-style-type: none;
   line-height: 30px;
-  font-size: 20px;
-  
+  font-size: 25px;
 }
 .list-1 li {
-  border: #4d7471 solid 1px;
-  width: 15em;
+  width: 10em;
   margin: 5px;
   padding: 5px;
   background-color: #ddd7d7;
- 
+
+  /* background-color: #e9d5932f; */
+  border: #4d7471 solid 1px;
+  border-radius: 5px;
+  color: #d77818;
+  /* padding: 5px 10px ; */
+  /* text-align: center; */
+  /* text-decoration: none; */
+  /* display: inline-block; */
+  font-size: 30px;
+  /* margin: 4px 10px; */
+  cursor: pointer;
+  text-shadow: 1px 1px 1px #272121;
+  transition-duration: 0.4s;
 }
-.list-1{
+.list-1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -91,20 +99,39 @@ img {
 }
 h1 {
   font-family: "Palanquin", "Allura";
-  font-size: 25px;
+  font-size: 40px;
   text-align: center;
   color: #d77818;
 }
 h2 {
-  margin-top: 30px;
+  margin-top: 20px;
   font-family: "Palanquin", "Allura";
-  font-size: 25px;
+  font-size: 30px;
   text-align: center;
   color: #d77818;
 }
 
 .greeting {
-  padding: 20px;
-  font-size: 20px;
-  
+  padding: 10px;
+  font-size: 25px;
+}
+
+.button {
+}
+.button:hover {
+  background-color: #e59c2e;
+  color: #fff;
+}
+
+.icons {
+  background-color: #4d7471;
+  margin: 20px;
+}
+.icon:hover{
+  background-color: #f7f6f4;
+  padding: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow:  1px 1px 1px #272121;
+  transition-duration: 0.4s;
 }
