--- a/About_Danny/main.css
+++ b/About_Danny/main.css
@@ -1,43 +1,159 @@
-/* About Me Danny */
+body {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* min-height: 40vh; */
+  background: #0670D8;
+}
 
-img {
+h1 {
+  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: large;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  justify-content: space-evenly;
+  justify-content: flex-start;
+  /* background: #61b5fa; */
+  background: #FFC62A;
+  justify-content: center;
+}
+
+.box {
+  /* background: #E9F0F5; */
+  background: white;
+  /* background: #439F9E; */
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  margin: 15px;
+  /* align-content: stretch; */
+  align-items: stretch;
+  justify-content: flex-start;
+  /* text-align: center; */
+  /* min-height: 40vh; */
+  /* max-height: 100%; */
+  /* width: 150px;
+  height: 150px; */
+  /* flex-grow: 1; */
+  object-fit: cover;
+  text-align: center;
+  border: black 3px solid;
+}
+
+.right {
+  /* justify-content: right; */
+}
+
+.box2 {
+  /* width: 500px; */
+}
+
+.box3 {
+  /* width: 500px; */
+}
+
+/* .flex-item {
   
-    width: 150px;
-    height: 150px;
-    text-align: center;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+} */
 
-  .aboutMe {
-    border: 1px rgb(71, 167, 143) solid;
-    margin: auto 20px;
-    height: 600px;
-    border-radius: 50px 0px;
-    background: #f2f2f2;
-    position: relative;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    color: #8e8b8b;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-  }
+.profile-image {
+  padding: 20px 20px 0px 20px;
+  border-radius: 50px;
+  /* max-height: 80%;
+  min-width: 80%; */
+  /* object-fit: cover; */
+  /* vertical-align: bottom; */
+}
 
-  .aboutMe_1 {
-    border: 2px solid black;
-    margin: 10px;
-    width: 30%;
-    flex-direction: column;
-  }
+.name {
+  /* margin: 10px; */
+  /* text-align: center; */
+}
 
-  .aboutMe_2 {
-    border: 2px solid black;
-    margin: 10px;
-    width: 60%;
-    flex-direction: row;
-  }
+.about_Me {
+  padding: 20px 0px 0px 20px;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+  /* padding-bottom: 10px; */
+  padding: 5px;
+}
+
+.wrapper {
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%); */
+}
+
+.wrapper-container {
+  background: #fff;
+  box-shadow: 0 0 10px rgba(150,150,150,0.5);
+  position: relative;
+  border-radius: 30px 30px 30px 30px;
+}
+
+.ribbon {
+  position: absolute;
+  text-align: center;
+}
+
+.ribbon-1 {
+  width: 150px;
+  height: 50px;
+  background: #ee573a;
+  top: 25px;
+  left: -10px;
+}
+
+.ribbon:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid black;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid black;
+}
+
+.ribbon-2 {
+  width: 150px;
+  height: 50px;
+  background: #21759a;
+  top: 25px;
+  left: -10px;
+}
+
+/* .ribbon-1:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: -50px;
+  border-left: 25px solid black;
+  border-right: 25px solid transparent;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+} */
+
+.ribbon-text {
+  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: medium;
+  color: white;
+}
+
+.area {
+  text-align: left;
+  padding: 75px 20px 0px 20px;
+  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: medium;
+}
