--- a/Home_Page/index.css
+++ b/Home_Page/index.css
@@ -71,7 +71,6 @@ h3 {
   border-radius: 50%;
   background: #f2f2f2;
 }
-
 .border {
   border: 1px solid #d67818;
   width: 100%;
@@ -79,4 +78,36 @@ h3 {
   background-color: #d67818;
   margin-top: 310px;
   position: absolute;
+}
+
+.NavBar {
+  background-color: #d67818;
+}
+.NavLinks {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  list-style: none;
+  height: 60px;
+  text-decoration: none;
+  align-items: center;
+}
+.active {
+  border: 2px solid blanchedalmond;
+  background-color: white;
+  border-radius: 5px;
+  margin-right: 30px;
+  font-size: 30px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  color: black;
+}
+.active:hover {
+  cursor: pointer;
+  -webkit-transition: all 0.8s ease;
+  border: 2px solid black;
+  background-color: #4d7471;
+  color: white;
 }
