--- a/Home_Page/index.css
+++ b/Home_Page/index.css
@@ -20,13 +20,13 @@ h1 {
   font-family: "Palanquin", "Allura";
   font-size: 60px;
   margin-bottom: 100px;
-  margin-top: 100px;
+  margin-top: 30px;
   text-align: center;
   color: #d77818;
   text-shadow: #111111 2px 2px 2px;
 }
 
-.team {
+.team  {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -71,6 +71,24 @@ h3 {
   border-radius: 50%;
   background: #f2f2f2;
 }
+.team_img:hover {
+  box-shadow: 2px 2px 15px #4D7471;
+}
+.nss_logo {
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  /* align-content: center; */
+  cursor: pointer;
+  /* background-color: #d77818; */
+  
+
+}
+.nss_logo img{
+  padding: 10px;
+  border: 2px solid #d67818;
+  box-shadow: #f5f1f1 2px 2px 10px;
+}
 
 .border {
   border: 1px solid #d67818;
@@ -79,4 +97,32 @@ h3 {
   background-color: #d67818;
   margin-top: 310px;
   position: absolute;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: #F2F2F2;
+  margin: 0px;
+  /* position: absolute; */
+  border: 1px solid #d67818;
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  text-align: center;
+}
+
+.icons{
+  /* display: flex;
+justify-content: center; */
+
+}
+
+.icon:hover{
+  background-color: #f7f6f4;
+  padding: 1px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow:  2px 2px 3px #363535;
+  transition-duration: 0.4s;
 }
