--- a/About_Mariana/index.css
+++ b/About_Mariana/index.css
@@ -35,7 +35,7 @@ img {
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
-  color:  #4d7471;
+  color: #4d7471;
   text-align: center;
   /* font-size: 20px; */
   padding: 20px;
@@ -48,7 +48,6 @@ img {
 .aboutMe_2 {
   width: 70em;
   text-align: center;
-
 }
 
 .border {
@@ -65,7 +64,8 @@ img {
   line-height: 30px;
   font-size: 25px;
 }
-.messy,.list-1 li {
+.messy,
+.list-1 li {
   width: 10em;
   margin: 5px;
   padding: 5px;
@@ -118,7 +118,8 @@ h2 {
 
 .button {
 }
-.messy:hover,.button:hover {
+.messy:hover,
+.button:hover {
   background-color: #e59c2e;
   color: #fff;
 }
@@ -127,12 +128,12 @@ h2 {
   background-color: #4d7471;
   margin: 20px;
 }
-.icon:hover{
+.icon:hover {
   background-color: #f7f6f4;
   padding: 2px;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow:  1px 1px 1px #272121;
+  box-shadow: 1px 1px 1px #272121;
   transition-duration: 0.4s;
 }
 
