--- a/Home_Page/index.css
+++ b/Home_Page/index.css
@@ -10,23 +10,37 @@ body {
 }
 
 .container {
-  margin-top: 5%;
+  margin-top: 2%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+}
+
+.instructors {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.instructor_img {
+  width: 100px;
+  height: 100px;
+  margin: 0px 10px;
+  background-color: #d67818;
+  padding: 4px;
+  border-radius: 50%;
 }
 
 h1 {
   font-family: "Palanquin", "Allura";
-  font-size: 60px;
-  margin-bottom: 100px;
-  margin-top: 30px;
+  font-size: 50px;
   text-align: center;
   color: #d77818;
   text-shadow: #111111 2px 2px 2px;
 }
 
-.team  {
+.team {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -44,6 +58,8 @@ h1 {
   position: relative;
   border: 1px rgb(71, 167, 143) solid;
   border-radius: 5px;
+  box-shadow: 2px 2px 20px #37423d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h3 {
@@ -71,65 +87,68 @@ h3 {
   border-radius: 50%;
   background: #f2f2f2;
 }
+
 .team_img:hover {
-  box-shadow: 2px 2px 15px #4D7471;
+  box-shadow: 2px 2px 15px #313534;
+  cursor: pointer;
+}
+
+.instructor_img:hover {
+  box-shadow: 2px 2px 15px #f2f2f2;
+  cursor: pointer;
 }
 .nss_logo {
-  /* position: relative; */
+  margin-top: 15px;
   display: flex;
   justify-content: center;
-  /* align-content: center; */
-  cursor: pointer;
-  /* background-color: #d77818; */
-  
-
 }
-.nss_logo img{
+.nss_logo img {
   padding: 10px;
   border: 2px solid #d67818;
   box-shadow: #f5f1f1 2px 2px 10px;
+  width: 30%;
 }
 
+.instructors_role {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  color: rgb(148, 147, 147);
+  font-size: 40px;
+  text-transform: uppercase;
+}
 .border {
-  border: 1px solid #d67818;
   width: 100%;
   height: 200px;
   background-color: #d67818;
-  margin-top: 310px;
+  margin-top: 180px;
   position: absolute;
 }
 
-<<<<<<< HEAD
 .footer {
   width: 100%;
   height: 100px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   margin: 0px;
-  /* position: absolute; */
-  border: 1px solid #d67818;
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
   text-align: center;
 }
 
-.icons{
-  /* display: flex;
-justify-content: center; */
-
-}
-
-.icon:hover{
+.icon:hover {
   background-color: #f7f6f4;
   padding: 1px;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow:  2px 2px 3px #363535;
+  box-shadow: 2px 2px 3px #363535;
   transition-duration: 0.4s;
-=======
+}
+
 .NavBar {
   background-color: #d67818;
 }
+
 .NavLinks {
   display: flex;
   flex-direction: row;
@@ -153,9 +172,7 @@ justify-content: center; */
 }
 .active:hover {
   cursor: pointer;
-  -webkit-transition: all 0.8s ease;
   border: 2px solid black;
   background-color: #4d7471;
   color: white;
->>>>>>> 8bfe379d9403c72e1c574d1af748a249458733f1
 }
