--- a/Home_Page/index.css
+++ b/Home_Page/index.css
@@ -152,7 +152,7 @@ h3 {
 .NavLinks {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   list-style: none;
   height: 60px;
   text-decoration: none;
