--- a/About_Mariana/index.css
+++ b/About_Mariana/index.css
@@ -43,7 +43,11 @@ img {
 .aboutMe_1 {
   width: 25em;
   flex-direction: column;
+
 }
+.aboutMe_1 {
+  width: 25em;
+  flex-direction: column;
 
 .aboutMe_2 {
   width: 70em;
