--- a/About_Mariana/About_Mariana_Messy/index_Messy.css
+++ b/About_Mariana/About_Mariana_Messy/index_Messy.css
@@ -21,10 +21,10 @@ img {
 }
 
 .container {
-  /* display: flex;
-  justify-content: center; */
-  /* flex-wrap: wrap;
-  margin-top: 100px; */
+  display: flex;
+  justify-content: center; 
+   flex-wrap: wrap;
+  margin-top: 100px;
 }
 .aboutMe {
   border: 1px rgb(71, 167, 143) solid;
@@ -48,13 +48,12 @@ img {
 .aboutMe_2 {
   width: 70em;
   text-align: center;
-
 }
 
 .border {
   border: 1px solid #1a0647;
   width: 100%;
-  height: 100px;
+  height: 500px;
   background-color: #e59c2e;
   /* margin-top: 250px; */
   /* position: absolute; */
@@ -102,6 +101,7 @@ h1 {
   font-size: 40px;
   text-align: center;
   color: #d77818;
+  text-decoration: none;
 }
 h2 {
   margin-top: 20px;
