--- a/About_Yogi/main.css
+++ b/About_Yogi/main.css
@@ -1,109 +1,149 @@
-/* body {
-  background-color: light green;
-} */
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
-img {
-  width: 200px;
-  height: 200px;
+#page {
+  display: grid;
+  width: 100%;
+  height: 250px;
+  grid-template-areas:
+    "head head"
+    "nav  main"
+    "nav  foot";
+  grid-template-rows: 1fr 6fr 1fr;
+  grid-template-columns: 1fr 7fr;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+#page > header {
+  grid-area: head;
+  background-color: #022b3a;
+}
+
+h1 {
+  text-align: center;
+  color: cornsilk;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+#page > nav {
+  grid-area: nav;
+  background-color: #1f7a8c;
+}
+
+.profile--img {
+  width: 20vw;
+  height: 20vh;
+  object-fit: contain;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+
+.social--icon {
+  width: 3vw;
+  height: 3vh;
+  object-fit: contain;
+  margin-top: 0.5rem;
+}
+
+.nav--contact {
   display: flex;
-  top: 1px;
-  border: 2px black solid;
-  align-content: center;
-  margin: -10px 40px;
-}
-
-html {
-  font-family: Gilroy;
-  color: rgb(28, 62, 8);
-}
-.Title {
-  color: blanchedalmond;
-  margin-bottom: 40px;
-  margin-top: 15px;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-evenly;
+  flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  border: 1px rgb(71, 167, 143) solid;
-  margin: auto 20px;
-
-  border-radius: 50px 50px;
-  background-color: whitesmoke;
-  position: relative;
-  margin-top: 50px;
-  margin-bottom: 50px;
-
-  text-align: center;
-  font-size: 20px;
-  padding: 20px;
 }
-
-.aboutMe {
-  border: solid 2px deepskyblue;
-  border-radius: 25px;
-  text-align: center;
-  margin: 5px;
-  width: 100px;
-}
-/*list-items {
+.nav--email {
   align-content: center;
-  flex-direction: column;*
-
-h1{
-  font-family: "Cormorant Garamond", serif;
-  font-family: "Roboto Mono", monospace;
-  font-size: large;
+  padding: 1rem;
+  text-align: center;
+  font-weight: 600;
+  color: antiquewhite;
 }
 
-.aboutMe_2 {
-  border: 2px solid black;
-  margin: 10px;
-  width: 60px;
+.nav--social {
   align-content: center;
-  flex-direction: column; 
+  padding: 1rem;
+  text-align: center;
+  width: 1rem;
+  height: 1rem;
+}
+
+#page > main {
+  grid-area: main;
+  background-color: #bfdbf7;
+}
+
+.content--root {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.content--main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 1rem;
 }
 
-.aboutMe_2--p {
-  align-content: center;
-  width: 40px;
-}*/
-.listA {
-  list-style-type: none;
-  font-size: 20px;
-}
-.list-items ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-size: 30px;
-  color: pink;
-}
-.list-items {
-  color: black;
+#page > footer {
+  grid-area: foot;
+  background-color: #e1e5f2;
+  text-align: center;
+  padding: 2rem;
 }
 
-.list-items li {
-  float: left;
+button {
+  background-color: #022b3a;
+  padding: 1rem;
+  border-radius: 15px;
+  font-weight: 600;
+  color: antiquewhite;
 }
 
-.list-items li a {
-  display: block;
-  padding: 8px;
-  background-color: #dddddd;
-  color: #4d7471;
+/* .parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  min-width: 100vw;
+  min-height: 100vh;
 }
-h1 {
-  font-family: "Cormorant Garamond", serif;
-  font-family: "Roboto Mono", monospace;
-  font-size: 30px;
-  color: #d67818;
+
+.header {
+  grid-area: 1 / 1 / 1 / 6;
+  background-color: #00171f;
+  text-align: center;
+  padding: 30px;
+  height: 5vh;
 }
+
+
+
+.side--bar {
+  grid-area: 2 / 1 / 5 / 1;
+  background-color: #fcd5ce;
+  padding: 30px;
+  text-align: center;
+}
+.footer {
+  grid-area: 5 / 1 / 6 / 6;
+  background-color: #fec89a;
+  text-align: center;
+  padding: 80px;
+}
+
+.content {
+  grid-area: 2 / 2 / 5 / 6;
+  background-color: #f9dcc4;
+}
+
+
+
+ */
